--- a/react-projects/package.json
+++ b/react-projects/package.json
@@ -9,11 +9,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.3",
     "mapbox-gl": "^3.5.2",
+    "papaparse": "^5.4.1",
     "qrcode.react": "^3.1.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-calendar": "^5.0.0",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
