--- a/react-projects/package.json
+++ b/react-projects/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
+    "framer-motion": "^11.3.28",
     "mapbox-gl": "^3.5.2",
     "papaparse": "^5.4.1",
     "qrcode.react": "^3.1.0",
@@ -25,7 +26,8 @@
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "validator": "^13.12.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.5.5"
   },
   "scripts": {
     "start": "react-scripts start",
