--- a/react-projects/package.json
+++ b/react-projects/package.json
@@ -16,6 +16,7 @@
     "papaparse": "^5.4.1",
     "qrcode.react": "^3.1.0",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.10.4",
     "react-calendar": "^5.0.0",
     "react-chartjs-2": "^5.2.0",
