--- a/react-projects/package.json
+++ b/react-projects/package.json
@@ -17,9 +17,11 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
+    "dompurify": "^3.1.6",
     "framer-motion": "^11.3.28",
     "lodash": "^4.17.21",
     "mapbox-gl": "^3.5.2",
+    "marked": "^14.1.2",
     "papaparse": "^5.4.1",
     "qrcode.react": "^3.1.0",
     "react": "^18.3.1",
