--- a/react-projects/package.json
+++ b/react-projects/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
     "dompurify": "^3.1.6",
+    "fabric": "^6.4.2",
     "framer-motion": "^11.3.28",
     "lodash": "^4.17.21",
     "mapbox-gl": "^3.5.2",
@@ -31,6 +32,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.2.1",
     "react-infinite-scroll-component": "^6.1.0",
