--- a/react-projects/package.json
+++ b/react-projects/package.json
@@ -23,6 +23,8 @@
     "lodash": "^4.17.21",
     "mapbox-gl": "^3.5.2",
     "marked": "^14.1.2",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "papaparse": "^5.4.1",
     "qrcode.react": "^3.1.0",
     "react": "^18.3.1",
