--- a/react-projects/package.json
+++ b/react-projects/package.json
@@ -15,9 +15,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
+    "body-parser": "^1.20.3",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
+    "cors": "^2.8.5",
     "dompurify": "^3.1.6",
+    "express": "^4.21.1",
     "fabric": "^6.4.2",
     "framer-motion": "^11.3.28",
     "lodash": "^4.17.21",
@@ -25,6 +28,7 @@
     "marked": "^14.1.2",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
+    "mongoose": "^8.7.2",
     "papaparse": "^5.4.1",
     "qrcode.react": "^3.1.0",
     "react": "^18.3.1",
