--- a/react-projects/package.json
+++ b/react-projects/package.json
@@ -23,6 +23,8 @@
     "express": "^4.21.1",
     "fabric": "^6.4.2",
     "framer-motion": "^11.3.28",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "lodash": "^4.17.21",
     "mapbox-gl": "^3.5.2",
     "marked": "^14.1.2",
