--- a/react-projects/package.json
+++ b/react-projects/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.13",
     "dompurify": "^3.1.6",
     "express": "^4.21.1",
     "fabric": "^6.4.2",
