--- a/react-projects/package.json
+++ b/react-projects/package.json
@@ -53,6 +53,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
+    "three": "^0.170.0",
     "validator": "^13.12.0",
     "web-vitals": "^2.1.4",
     "zod": "^3.23.8",
