--- a/react-projects/package.json
+++ b/react-projects/package.json
@@ -12,6 +12,7 @@
     "@mui/x-date-pickers-pro": "^7.16.0",
     "@react-google-maps/api": "^2.19.3",
     "@reduxjs/toolkit": "^2.2.7",
+    "@stripe/react-stripe-js": "^3.1.1",
     "@tanstack/react-query": "^5.61.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -47,6 +48,7 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.2.1",
+    "react-image-crop": "^11.0.7",
     "react-infinite-scroll-component": "^6.1.0",
     "react-map-gl": "^7.1.7",
     "react-projects": "file:",
@@ -54,6 +56,7 @@
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
+    "react-webcam": "^7.2.0",
     "redux": "^5.0.1",
     "three": "^0.170.0",
     "validator": "^13.12.0",
