--- a/react-projects/package.json
+++ b/react-projects/package.json
@@ -30,6 +30,7 @@
     "framer-motion": "^11.3.28",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
+    "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
     "mapbox-gl": "^3.5.2",
     "marked": "^14.1.2",
@@ -44,12 +45,14 @@
     "react-calendar": "^5.0.0",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.3.0",
+    "react-dnd": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.2.1",
     "react-image-crop": "^11.0.7",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-leaflet": "^4.0.0",
     "react-map-gl": "^7.1.7",
     "react-projects": "file:",
     "react-redux": "^9.1.2",
