--- a/react-projects/package.json
+++ b/react-projects/package.json
@@ -46,6 +46,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.3.0",
     "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.53.0",
@@ -60,6 +61,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
     "react-webcam": "^7.2.0",
+    "reactflow": "^11.11.4",
     "redux": "^5.0.1",
     "three": "^0.170.0",
     "validator": "^13.12.0",
