--- a/react-projects/package.json
+++ b/react-projects/package.json
@@ -65,6 +65,7 @@
     "redux": "^5.0.1",
     "three": "^0.170.0",
     "validator": "^13.12.0",
+    "wavesurfer.js": "^7.8.14",
     "web-vitals": "^2.1.4",
     "zod": "^3.23.8",
     "zustand": "^4.5.5"
