--- a/react-projects/package.json
+++ b/react-projects/package.json
@@ -67,6 +67,7 @@
     "validator": "^13.12.0",
     "wavesurfer.js": "^7.8.14",
     "web-vitals": "^2.1.4",
+    "web3": "^4.16.0",
     "zod": "^3.23.8",
     "zustand": "^4.5.5"
   },
