--- a/react-projects/package.json
+++ b/react-projects/package.json
@@ -25,6 +25,7 @@
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
     "dompurify": "^3.1.6",
+    "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "fabric": "^6.4.2",
     "framer-motion": "^11.3.28",
