Commit Disco Ball

--- a/react-projects/package.json
+++ b/react-projects/package.json
@@ -29,6 +29,7 @@
     "express": "^4.21.1",
     "fabric": "^6.4.2",
     "framer-motion": "^11.3.28",
+    "howler": "^2.2.4",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
     "leaflet": "^1.9.4",
