--- a/react-projects/package.json
+++ b/react-projects/package.json
@@ -46,6 +46,7 @@
     "react-bootstrap": "^2.10.4",
     "react-calendar": "^5.0.0",
     "react-chartjs-2": "^5.2.0",
+    "react-confetti": "^6.4.0",
     "react-datepicker": "^7.3.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
