--- a/react-projects/package.json
+++ b/react-projects/package.json
@@ -58,6 +58,7 @@
     "react-image-crop": "^11.0.7",
     "react-infinite-scroll-component": "^6.1.0",
     "react-leaflet": "^4.0.0",
+    "react-lottie": "^1.2.10",
     "react-map-gl": "^7.1.7",
     "react-projects": "file:",
     "react-redux": "^9.1.2",
