--- a/react-projects/package.json
+++ b/react-projects/package.json
@@ -65,10 +65,12 @@
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
+    "react-tsparticles": "^2.12.2",
     "react-webcam": "^7.2.0",
     "reactflow": "^11.11.4",
     "redux": "^5.0.1",
     "three": "^0.170.0",
+    "tsparticles": "^3.8.1",
     "validator": "^13.12.0",
     "wavesurfer.js": "^7.8.14",
     "web-vitals": "^2.1.4",
