--- a/react-projects/package.json
+++ b/react-projects/package.json
@@ -66,6 +66,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.5",
     "react-table": "^7.8.0",
     "react-toastify": "^10.0.5",
     "react-tsparticles": "^2.12.2",
