--- a/react-projects/package.json
+++ b/react-projects/package.json
@@ -67,6 +67,7 @@
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.5",
+    "react-swipeable": "^7.0.2",
     "react-table": "^7.8.0",
     "react-toastify": "^10.0.5",
     "react-tsparticles": "^2.12.2",
